PreferencesEdit.material_link not respected #60014

Closed
opened 2018-12-31 15:21:05 +01:00 by Roel Koster · 12 comments
Member

System Information
Operating system: OSX/Linux
Graphics card: NVidia 1050Ti

Blender Version
Broken: 2.79b Release

Short description of error
When choosing preference setting behaviour to link materials to object instead of data, this setting is ignored.

Exact steps for others to reproduce the error
Select the "link to object" in preferences
Add Object
Add Material
Observe material is still linked to data

Either I'm doing something wrong or this has been an issue since "forever"
Even the 2.79b release doesn't respect the setting.

Thanks for looking into it,
Roel

Screenshot from 2018-12-31 15-13-07.png

**System Information** Operating system: OSX/Linux Graphics card: NVidia 1050Ti **Blender Version** Broken: 2.79b Release **Short description of error** When choosing preference setting behaviour to link materials to object instead of data, this setting is ignored. **Exact steps for others to reproduce the error** Select the "link to object" in preferences Add Object Add Material Observe material is still linked to data Either I'm doing something wrong or this has been an issue since "forever" Even the 2.79b release doesn't respect the setting. Thanks for looking into it, Roel ![Screenshot from 2018-12-31 15-13-07.png](https://archive.blender.org/developer/F6129619/Screenshot_from_2018-12-31_15-13-07.png)
Author
Member

Added subscriber: @kostex

Added subscriber: @kostex

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Is it still broken in the 2.79 build from here https://builder.blender.org/download/ ?

Is it still broken in the 2.79 build from here https://builder.blender.org/download/ ?
Author
Member

maybe I should have said broken SINCE...
every build since then, up and including 2.80 branch doesn’t respect the setting.
just check the behaviour, it’s quite simple to verify..

maybe I should have said broken SINCE... every build since then, up and including 2.80 branch doesn’t respect the setting. just check the behaviour, it’s quite simple to verify..

You are right, it is simple to verify. But the tracker is being flooded with bug reports as the interest for 2.8 is really high. So if the version in the report is not recent, that is the first thing to ask for.

You are right, it is simple to verify. But the tracker is being flooded with bug reports as the interest for 2.8 is really high. So if the version in the report is not recent, that is the first thing to ask for.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 seems like you made this change be1a684755

It seems like this will cause the user preferences to never be respected. So it is kinda useless.
How to proceed? If I make user prefs be respected again, the issue you fixed will be back too.

@ideasman42 seems like you made this change be1a684755 It seems like this will cause the user preferences to never be respected. So it is kinda useless. How to proceed? If I make user prefs be respected again, the issue you fixed will be back too.

Added subscriber: @capnm

Added subscriber: @capnm

This issue was referenced by 847b21ee08

This issue was referenced by 847b21ee08e5a30a2fe35ede4c5b3a73af404af7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-01-03 02:37:36 +01:00

@ZedDB adding new slots worked, it was the new-material operator was failing when the object had no materials, now fixed.

@ZedDB adding new slots worked, it was the new-material operator was failing when the object had no materials, now fixed.

@ideasman42 Ah, I see. My bad!

@ideasman42 Ah, I see. My bad!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60014
No description provided.