Fix T60014: material link pref ignored

The PreferencesEdit.material_link only worked for adding slots,
adding an initial new material didn't respect the preference.